--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -135,10 +135,10 @@
 .newsletter-view {
   min-height: calc(100vh - 300px);
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  padding: 20px 20px;
+  padding: 8px 16px;
 }
 
 @media (max-width: 480px) {
